<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sao.modclothesproject.PareShapeActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:fillViewport="false"
        android:id="@+id/scrollView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="130dp"
                android:layout_height="250dp"
                android:id="@+id/imgvPear"
                android:background="@mipmap/pear"
                android:layout_gravity="center"
                android:text="@string/pare_shape1"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/space"
                android:id="@+id/space"
                android:layout_below="@+id/scrollView2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pare_shape1"
                android:id="@+id/pearShape1"
                android:layout_below="@+id/scrollView2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/space"
                android:id="@+id/space1"
                android:layout_below="@+id/scrollView2" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pare_shape2"
                android:id="@+id/pearShape2"
                android:layout_below="@+id/scrollView2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/space"
                android:id="@+id/space7"
                android:layout_below="@+id/scrollView2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Do"
                android:id="@+id/title_do"
                android:layout_below="@+id/scrollView2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_pear_1"
                android:id="@+id/detail_pare_1"
                android:layout_below="@+id/scrollView2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/space"
                android:id="@+id/space4"
                android:layout_below="@+id/scrollView2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_pear_2"
                android:id="@+id/detail_pare_2"
                android:layout_below="@+id/scrollView2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/space"
                android:id="@+id/space5"
                android:layout_below="@+id/scrollView2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_pear_3"
                android:id="@+id/detail_pare_3"
                android:layout_below="@+id/scrollView2" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
